# ink-generator-wasm

./: .gitignore  Cargo.toml  LICENSE  LICENSE_APACHE  LICENSE_MIT  README.md
scripts/: build-debug.sh  run_debug.js  test_contracts.sh
src/: init.rs  lib.rs  logger.rs  prettifier.rs
src/code_loader/: cache_proxy.rs  loader.rs  mod.rs  static_files.rs
src/generator/: ast.rs  manifest_parser.rs  merge.rs  mod.rs  source_parser.rs
src/generator/merge/: constructor_values.rs  errors.rs  uses.rs
